1. api-аутентификация 2. Абстрактный response 3. Пагининованный lot-response
