# routes/api.php
@@ -2,6 +2,7 @@
 
 declare(strict_types=1);
 
+use App\Http\Controllers\Api\Auth\AccessTokenApiController;
 use App\Http\Controllers\Api\Auth\RegisteredUserApiController;
 use App\Http\Controllers\Api\LotApiController;
 
@@ -11,8 +12,15 @@ Route::controller(RegisteredUserApiController::class)->group(function () {
     });
 });
 
+Route::controller(AccessTokenApiController::class)->group(function () {
+    Route::prefix('login')->group(function () {
+        Route::post('/', 'store');
+    });
+});
+
 Route::controller(LotApiController::class)->group(function () {
     Route::prefix('lots')->group(function () {
+        Route::get('/', 'index');
         Route::get('/{lotId}', 'view');
     });
 });
